# UC-Cross-Atlas

./: .gitignore  Cross Atlas Reproductibility.md  DECISIONS.md  OPEN_FLAGS.md  PLAN.md  README.md  pyproject.toml
code/01_magma/: README.md  make_scdrs_gs.py  prepare_gwas.py  run_magma.sh  sanity_check.py
code/01b_ldsc/: README.md  environment_py27.yml  munge_for_ldsc.py  parse_log.py  run_ldsc_h2.py  test_munge_for_ldsc.py  test_parse_log.py  test_run_ldsc_h2.py
code/02_atlas_prep/: README.md  _broad_vocab.py  _qc_policy.py  atlas_schemas.md  cl_rollup.py  cl_rollup_maps.yaml  hgnc_remap.py  load_garrido_trigo.py  load_hca_gut.py  load_mennillo.py  load_pangi.py  load_smillie.py  load_taurus.py
code/03_scdrs/: README.md  aggregate_null_draws.py
code/04_seismic/: README.md  run_seismic.R
code/05_magma_geneprop/: README.md  run_magma_geneprop.py
code/06_concordance/: README.md  compute_concordance.py  metrics.py  test_compute_concordance.py  test_metrics.py
code/07_concordance/: README.md
code/07_regime2_meta/: README.md  run_brown.py  test_run_brown.py
code/08_cross_method/: README.md  run_cross_method.py  test_run_cross_method.py
code/09_cross_gwas/: README.md  run_cross_gwas.py  test_run_cross_gwas.py
code/10_broad_atlas_hca/: README.md  run_hca_comparison.py
code/11_broad_atlas_pangi/: README.md  run_pangi_comparison.py
code/12_positive_control/: README.md  run_controls.py
code/13_figures/: README.md
code/_shared/: canonical_broad_DRAFT.md  constants.py  git.py  result_loading.py  test_result_loading.py
data/atlases/: garrido_trigo_markers.xlsx
data/reference/: cl_terms_pinned.tsv
scripts/: README.md  config.sh  download_refs.sh  environment-laptop.yml  environment.yml  install_r_deps.R  setup_env.sh  wsl_setup.md
scripts/slurm/: 01_magma.slurm  03_scdrs_compute.slurm  04_seismic.slurm  README.md  donor_loo_array.slurm  test_retest_array.slurm
(+1 files in other folders)
