[project]
name = "uc-cross-atlas"
version = "0.1.0"
description = "Cross-atlas reproducibility of GWAS-driven cell-type prioritization in ulcerative colitis"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Muskaan" }]

dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
atlas = [
    "anndata>=0.10",
    "scanpy>=1.10",
    "scdrs==1.0.4",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["code"]
